스타일 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fizzycrisp — Menu</title>
+  <title>오류동 파티</title>
 
   <!-- Optional: Elegant serif -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,33 +12,43 @@
 
   <style>
     :root{
-      --bg:#0b0b0c;
-      --paper:#0f1012;
-      --text:#f5f3ee;
-      --muted:#b9b3a7;
-      --line:rgba(245,243,238,.14);
-      --accent:#e7dcc6;
+      --bg:#f5f3ee;
+      --paper:#ffffff;
+      --text:#20201c;
+      --muted:#8b877c;
+      --line:rgba(0,0,0,.08);
+      --accent:#8b6b39;
+      --shadow-soft:0 18px 45px rgba(16,12,0,.12);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;
-      background: radial-gradient(1200px 800px at 20% 0%, rgba(231,220,198,.10), transparent 55%),
-                  radial-gradient(900px 700px at 90% 15%, rgba(231,220,198,.08), transparent 55%),
-                  var(--bg);
+      background:
+        radial-gradient(900px 600px at 15% 0%, rgba(214,198,167,.22), transparent 60%),
+        radial-gradient(900px 600px at 90% 15%, rgba(214,198,167,.16), transparent 60%),
+        var(--bg);
       color:var(--text);
       font-family:"Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      letter-spacing:.1px;
+      letter-spacing:.02em;
     }
-    .wrap{max-width:820px;margin:0 auto;padding:28px 18px 40px}
+    .wrap{
+      max-width:820px;
+      margin:0 auto;
+      padding:40px 18px 56px;
+    }
     .card{
-      background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));
-      border:1px solid var(--line);
-      border-radius:20px;
+      background:
+        radial-gradient(140% 140% at 0% 0%, rgba(255,255,255,.95), rgba(252,247,238,.96)),
+        var(--paper);
+      border:1px solid rgba(0,0,0,.06);
+      border-radius:22px;
       overflow:hidden;
+      box-shadow:var(--shadow-soft);
+      backdrop-filter:blur(16px);
     }
     header{
-      padding:26px 22px 18px;
+      padding:28px 26px 18px;
       border-bottom:1px solid var(--line);
     }
     .brand{
@@ -46,57 +56,52 @@
     }
     .title{
       font-family:"Cormorant Garamond", serif;
-      font-weight:600;
-      font-size:30px;
-      letter-spacing:.6px;
+      font-weight:500;
+      font-size:32px;
+      letter-spacing:.08em;
       margin:0;
+      text-transform:uppercase;
     }
     .meta{
       color:var(--muted);
       font-size:12px;
       margin-top:8px;
-      line-height:1.45;
-    }
-    .pill{
-      border:1px solid var(--line);
-      border-radius:999px;
-      padding:8px 12px;
-      font-size:12px;
-      color:var(--muted);
-      white-space:nowrap;
+      line-height:1.65;
     }
     .section{
-      padding:18px 22px 6px;
+      padding:20px 26px 4px;
     }
     .section h2{
-      margin:0 0 10px;
+      margin:0 0 8px;
       font-family:"Cormorant Garamond", serif;
       font-weight:500;
-      font-size:18px;
-      letter-spacing:.4px;
+      font-size:17px;
+      letter-spacing:.28em;
+      text-transform:uppercase;
       color:var(--accent);
     }
 
-    .items{padding:0 6px 16px}
+    .items{padding:4px 10px 20px}
     .item{
-      padding:14px 16px;
-      margin:0 16px;
-      border-top:1px solid rgba(245,243,238,.10);
+      padding:14px 14px;
+      margin:0 18px;
+      border-top:1px solid rgba(0,0,0,.04);
       display:grid;
       grid-template-columns: 1fr auto;
-      gap:8px 12px;
+      gap:6px 12px;
     }
-    .item:first-child{border-top:1px solid rgba(245,243,238,.10)}
+    .item:first-child{border-top:1px solid rgba(0,0,0,.04)}
     .name{
-      font-size:16px;
+      font-size:15px;
       font-weight:500;
-      line-height:1.25;
+      line-height:1.35;
+      letter-spacing:.03em;
     }
     .sub{
       grid-column:1 / -1;
       color:var(--muted);
-      font-size:13px;
-      line-height:1.4;
+      font-size:12px;
+      line-height:1.5;
     }
     .dots{
       grid-column:1 / -1;
@@ -104,20 +109,21 @@
       margin-top:6px;
     }
     footer{
-      padding:16px 22px 22px;
+      padding:18px 26px 22px;
       border-top:1px solid var(--line);
       color:var(--muted);
-      font-size:12px;
-      line-height:1.6;
+      font-size:11px;
+      line-height:1.7;
     }
     .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
-    a{color:var(--accent);text-decoration:none;border-bottom:1px solid rgba(231,220,198,.35)}
+    a{color:var(--accent);text-decoration:none;border-bottom:1px solid rgba(139,107,57,.35)}
     @media (max-width:480px){
       .title{font-size:28px}
-      .item{margin:0 10px}
-      header{padding:22px 16px 16px}
-      .section{padding:16px 16px 6px}
-      footer{padding:14px 16px 18px}
+      .wrap{padding:28px 14px 40px}
+      header{padding:22px 18px 14px}
+      .section{padding:18px 18px 4px}
+      .item{margin:0 12px;padding:12px 10px}
+      footer{padding:14px 18px 18px}
     }
   </style>
 </head>
@@ -127,10 +133,9 @@
       <header>
         <div class="brand">
           <div>
-            <h1 class="title">Fizzycrisp</h1>
-            <div class="meta">Seasonal Tasting À la Carte · Kitchen Select</div>
+            <h1 class="title">오류동 파티</h1>
+            <div class="meta">2월 21일 18:00 · 약령시로 21길 30 2동 801호</div>
           </div>
-          <div class="pill">ID <span class="mono">fizzycrisp</span></div>
         </div>
         <div class="meta">※ 메뉴 구성은 수급 상황에 따라 변경될 수 있습니다.</div>
       </header>
@@ -142,12 +147,12 @@
       <div class="items">
         <div class="item">
           <div class="name">스테이크 타르타르</div>
-          <div class="sub">캐비어 · 단새우</div>
+          <div class="sub">캐비어 · 단새우 · 안심</div>
         </div>
 
         <div class="item">
           <div class="name">굴 알 아히요</div>
-          <div class="sub">굴 · 마늘 · 토마토</div>
+          <div class="sub">굴 · 토마토</div>
         </div>
 
         <div class="item">
@@ -156,8 +161,13 @@
         </div>
 
         <div class="item">
-          <div class="name">숏파스타 봉골레</div>
-          <div class="sub">바지락 · 버터</div>
+          <div class="name">라자냐</div>
+          <div class="sub">홈메이드 라구</div>
+        </div>
+
+        <div class="item">
+          <div class="name">봉골레 리가토니</div>
+          <div class="sub">바지락</div>
         </div>
 
         <div class="item">
@@ -172,7 +182,7 @@
       </div>
 
       <footer>
-        <div>문의/예약 · <a href="#" onclick="return false;">Contact</a></div>
+        <div>문의 - 인주, 여성</div>
         <div class="meta">Allergen note: seafood, dairy, gluten may be present.</div>
       </footer>
     </div>
