--- a/index.html
+++ b/index.html
@@ -157,17 +157,12 @@
 
         <div class="item">
           <div class="name">홍합 스튜</div>
-          <div class="sub">홍합 · 감자 · 토마토</div>
-        </div>
-
-        <div class="item">
-          <div class="name">라자냐</div>
-          <div class="sub">홈메이드 라구</div>
+          <div class="sub">홍합 · 토마토</div>
         </div>
 
         <div class="item">
           <div class="name">봉골레 리가토니</div>
-          <div class="sub">바지락</div>
+          <div class="sub">바지락 · 백합 · 포르치니</div>
         </div>
 
         <div class="item">
@@ -176,8 +171,18 @@
         </div>
 
         <div class="item">
+          <div class="name">라자냐</div>
+          <div class="sub">홈메이드 라구</div>
+        </div>
+
+        <div class="item">
           <div class="name">비프 웰링턴</div>
-          <div class="sub">안심</div>
+          <div class="sub">안심 · 프로슈토 · 버섯 · 페이스트리</div>
+        </div>
+
+        <div class="item">
+          <div class="name">크림치즈 곶감 말이</div>
+          <div class="sub">곶감 · 크림치즈 · 호두</div>
         </div>
       </div>
 
